--- a/css/ga.css
+++ b/css/ga.css
@@ -10,8 +10,8 @@ h2{margin:50px 0 0 0;}
 #dropArea:hover,
 #dropArea.hover{background:#eaf;}
 
-h1{margin:0;}
-h1 span{font-size:12px;font-weight:normal;}
+h1{margin:10px 0 0 0;}
+h1 a{text-decoration:none;color:#000;}
 
 .s{border:1px solid #666;padding:10px;margin:10px 0;text-align:center;}
 
