--- a/css/g.css
+++ b/css/g.css
@@ -2,14 +2,17 @@ html,
 body{margin:0;padding:0;font-family:Helvetica, Arial, sans-serif;}
 li{list-style:none;}
 
-h1{background:#fff;border:10px solid #000;font-weight:bold;margin:20px 40px 40px 40px;padding:30px;color:#000;text-align:center;}
-h1 a{color:#000;text-decoration:none;}
+h1{background:#fff;font-weight:bold;margin:0px 40px 40px 40px;padding:0 30px 30px;color:#000;text-align:center;}
+h1 a{color:#999;text-decoration:none;}
 h2{margin:30px 10px 0px 10px;padding:0 30px;}
 
+.content{overflow:hidden;}
 .show{text-align:center;margin:0 40px 50px;padding:50px 0 80px;}
-nav,.show .nav{position:fixed;right:0;top:25%;cursor:pointer;text-decoration:none;color:#000;height:400px;line-height:400px;text-align:center;width:50px;}
-.show .nav:hover{background:#ccc;color:#fff;}
+nav, .show .nav{position:fixed;right:0;top:0;cursor:pointer;text-decoration:none;color:#000;height:100%;text-align:center;width:25%;}
+nav span, .nav span{display:block;position:absolute;top:50%;right:5px;}
+.show .nav:hover{color:#ccc;}
 nav:first-child,.nav:first-child{right:auto;left:0;}
+nav:first-child span,.nav:first-child span{right:auto;left:5px;}
 .prev{border-radius:0 5px 5px 0;}
 .next{border-radius:5px 0 0 5px;}
 .show nav.inactive{cursor:default;color:#ccc;}
@@ -17,12 +20,25 @@ nav:first-child,.nav:first-child{right:auto;left:0;}
 .all{margin:0px 40px 80px 40px;overflow:hidden;border-top:1px solid #ccc;padding:20px 0 0;text-align:center;}
 .all li{display:inline-block;margin:10px 1px;border:1px solid #ccc;text-align:center;cursor:pointer;}
 .all li:hover{background:#ccc;}
-.all a{text-decoration:none;display:block;padding:5px 15px;}
+.all a{text-decoration:none;display:block;padding:5px 15px;max-width:400px;overflow:hidden;}
 .all h2{font-weight:normal;font-size:14px;margin:0;color:#999;}
 .all span{font-size:11px;color:#999;}
 
 
-footer{height:50px;border-top:1px solid #ccc;background:#666;padding:0 40px;}
-footer ul{margin:0;padding:14px 0;}
-footer li{float:left;padding-right:10px;}
+footer{
+position:fixed;
+left:0px;
+bottom:0px;
+height:30px;
+line-height:20px;
+width:100%;
+background:#999;
+/*
+	height:50px;
+	border-top:1px solid #ccc;
+	background:#666;
+	padding:0 40px;*/
+}
+footer ul{margin:0;padding:4px 0;}
+footer li{float:left;padding-left:10px;}
 footer a{color:#fff;}
