--- a/css/g.css
+++ b/css/g.css
@@ -2,7 +2,7 @@ html,
 body{margin:0;padding:0;font-family:Helvetica, Arial, sans-serif;}
 li{list-style:none;}
 
-h1{background:#fff;font-weight:bold;margin:0px 40px 40px 40px;padding:0 30px 30px;color:#000;text-align:center;}
+h1{font-weight:bold;margin:0px 40px 40px 40px;padding:0 30px 30px;color:#000;text-align:center;}
 h1 a{color:#999;text-decoration:none;}
 h2{margin:30px 10px 0px 10px;padding:0 30px;}
 
